--- a/src/less/framework7/contacts.less
+++ b/src/less/framework7/contacts.less
@@ -11,6 +11,7 @@
         font-weight: 500;
         line-height: 22px;
         height: 22px;
+        position: relative;
     }
     .list-group:first-child ul {
         .hairline-remove(top);
