--- a/src/less/framework7/framework7.less
+++ b/src/less/framework7/framework7.less
@@ -34,3 +34,5 @@
 @import url('colors.less');
 @import url('animation.less');
 @import url('framework7.themes.less');
+@import url('toast.less');
+@import url('indexed-list.less');
