--- a/src/less/framework7/toast.less
+++ b/src/less/framework7/toast.less
@@ -1,35 +1,30 @@
 .toast-container{
-  position: fixed;
-  width: 80%;
-  height: 35px;
-  left: 50%;
-  bottom: 20px;
-  margin-left: -40%;
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 5px;
-  z-index: 11800;
-  color: #fff;
-  font-size: 20px;
-  font-weight: normal;
-  display: none;
-  opacity: 0;
-  transition: opacity 0.8s
-}
-
-.toast-container.show{
-  display: block;
-}
-
-.toast-container.fadein{
-  opacity: 1;
-}
-
-.toast-icon{
-  font-size:85px;
-  text-align:center;
+    position: fixed;
+    height: 35px;
+    left: 50%;
+    bottom: 20px;
+    padding: 5px 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    z-index: 11800;
+    color: #fff;
+    font-size: 20px;
+    font-weight: normal;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.8s;
+    &.show{
+        display: block;
+    }
+    &.fadein{
+        opacity: 1;
+    }
+    i {
+        margin-right:5px;
+    }
 }
 
 .toast-msg{
-  text-align:center;
-  font-weight:normal;
+    text-align:center;
+    font-weight:normal;
 }
