add welcomescreen and login page

--- a/src/less/framework7/framework7.less
+++ b/src/less/framework7/framework7.less
@@ -36,3 +36,4 @@
 @import url('framework7.themes.less');
 @import url('toast.less');
 @import url('indexed-list.less');
+@import url('welcomescreen.less');
