--- a/src/less/framework7/icons.less
+++ b/src/less/framework7/icons.less
@@ -104,4 +104,9 @@ i.icon {
         text-align: center;
         font-weight: 100;
     }
+    &.icon-default-head {
+        width: 29px;
+        height: 29px;
+        background-image: url("@{imgBaseUrl}/default-head.png");
+    }
 }
