--- a/src/less/framework7/indexed-list.less
+++ b/src/less/framework7/indexed-list.less
@@ -34,7 +34,7 @@
         border-radius: 100%;
         margin: 2px 0px;
         &.active {
-            background-color: lightblue;
+            background-color: lightgreen;
         }
     }
     li:before {
