--- a/kitchen-sink/css/demo.css
+++ b/kitchen-sink/css/demo.css
@@ -247,3 +247,29 @@ html[dir="rtl"] .custom-accordion .accordion-item-toggle span {
 .custom-accordion .accordion-item-content {
   padding: 0px 15px;
 }
+
+/*welcomescreen*/
+.tutorialicon {
+  font-size: 250px;
+  line-height: 170px;
+}
+
+.tutorial-close-btn {
+  background: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  color: #0da6ec;
+}
+
+.welcomescreen-container .welcomescreen-text a{
+  color: #fff;
+  text-decoration: underline;
+}
+
+.tutorial-close-btn {
+  background: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  color: #0da6ec !important;
+  text-decoration: none !important;
+}
