--- a/src/less/framework7/icons.less
+++ b/src/less/framework7/icons.less
@@ -6,6 +6,7 @@ i.icon {
     background-position: center;
     background-repeat: no-repeat;
     font-style: normal;
+    font-size: 29px;
     position: relative;
     &.icon-back {
         width: 12px;
