--- a/kitchen-sink/css/chat.css
+++ b/kitchen-sink/css/chat.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: url('image/iphone.png') no-repeat;
+    background: url('../img/iphone.png') no-repeat;
     background-size: 100% 100%;
     -webkit-user-select: none;
     -webkit-app-region: drag;
