--- a/kitchen-sink/css/chat.css
+++ b/kitchen-sink/css/chat.css
@@ -20,3 +20,70 @@
     height: 100px;
     background-size:100px 100px;
 }
+
+.center_div {
+    text-align: center;
+    position: relative;
+}
+
+
+.audio_call_head {
+    background-repeat: no-repeat;
+    width: 250px;
+    height: 250px;
+    margin-left: 115px;
+    margin-top: 30px;
+    background-size: 250px 250px;
+}
+
+.video_call_status_container {
+    height: 110px;
+}
+
+.chat_head {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.video_call_head {
+    background-repeat: no-repeat;
+    width: 100px;
+    height: 100px;
+    background-size: 100px 100px;
+}
+
+.video_call_status {
+    margin-left: 120px;
+    padding-top: 16px;
+}
+
+.call_state {
+    font-size: 10px;
+}
+
+.call_time {
+    font-size: 15px;
+}
+
+.video_small_screen {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    top:120px;
+    left:330px;
+}
+
+.video_large_screen {
+    position: absolute;
+    background-color: darkgray;
+    width: 460px;
+    height: 460px;
+    top:120px;
+}
+
+.vidc_panel {
+    position: relative;
+    top:400px;
+}
+
