finish debug call

--- a/kitchen-sink/css/chat.css
+++ b/kitchen-sink/css/chat.css
@@ -21,6 +21,10 @@
     background-size:100px 100px;
 }
 
+.default_head {
+    background-image: url("../img/default-head.png");
+}
+
 .center_div {
     text-align: center;
     position: relative;
@@ -48,9 +52,9 @@
 
 .video_call_head {
     background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
-    background-size: 100px 100px;
+    width: 70px;
+    height: 70px;
+    background-size: 70px 70px;
 }
 
 .video_call_status {
