--- a/kitchen-sink/css/chat.css
+++ b/kitchen-sink/css/chat.css
@@ -19,10 +19,6 @@
     background-size:100px 100px;
 }
 
-.default_head {
-    background-image: url("../img/app/chat/default-head.png");
-}
-
 .center_div {
     text-align: center;
     position: relative;
@@ -90,6 +86,7 @@
 }
 
 /*icons*/
+.default_head {background-image: url("../img/app/chat/default_head.png")}
 .img_group_chat {background-image:url(../img/app/chat/group_chat.png)}
 .img_user_offline {background-image:url(../img/app/chat/user_offline.png)}
 .img_user_online {background-image:url(../img/app/chat/user_online.png)}
