update with framework7 1.4.0

--- a/src/less/framework7/ios/contacts.less
+++ b/src/less/framework7/ios/contacts.less
@@ -11,7 +11,10 @@
         font-weight: 500;
         line-height: 22px;
         height: 22px;
-        position: relative;
+	position: relative;
+        html.ios-gt-8 & {
+            font-weight: 600;
+        }
     }
     .list-group:first-child ul {
         .hairline-remove(top);
