--- a/src/less/framework7/ios/content-block.less
+++ b/src/less/framework7/ios/content-block.less
@@ -6,7 +6,7 @@
     margin: 35px 0;
     padding: 0 15px;
     color: @contentBlockTitle;
-
+    box-sizing: border-box;
 }
 .content-block-title {
     position: relative;
