--- a/src/less/framework7/ios/framework7.ios.less
+++ b/src/less/framework7/ios/framework7.ios.less
@@ -23,7 +23,9 @@
 @import url('messages.less');
 @import url('statusbar.less');
 @import url('preloader.less');
+@import url('progressbar.less');
 @import url('pull-to-refresh.less');
+@import url('autocomplete.less');
 @import url('swiper.less');
 @import url('photo-browser.less');
 @import url('picker.less');
@@ -31,9 +33,8 @@
 @import url('notifications.less');
 @import url('login-screen.less');
 @import url('disabled.less');
-@import url('colors.less');
 @import url('animation.less');
-@import url('framework7.themes.less');
+@import url('framework7.ios.colors.less');
 @import url('toast.less');
 @import url('indexed-list.less');
 @import url('welcomescreen.less');
