--- a/src/less/framework7/ios/pages.less
+++ b/src/less/framework7/ios/pages.less
@@ -11,7 +11,7 @@
     background: #000;
 }
 .page {
-    .border-box();
+    box-sizing: border-box;
     position: absolute;
     left: 0;
     top: 0;
@@ -40,7 +40,7 @@
 }
 .page-content {
     .scrollable();
-    .border-box();
+    box-sizing: border-box;
     height: 100%;
     position: relative;
     z-index: 1;
