--- a/src/less/framework7/ios/statusbar.less
+++ b/src/less/framework7/ios/statusbar.less
@@ -1,7 +1,7 @@
 /* === Statusbar overlay === */
 html.with-statusbar-overlay body{
     padding-top: 20px;
-    .border-box();
+    box-sizing: border-box;
     .statusbar-overlay {
         display: block;
     }
