--- a/src/less/framework7/ios/_mixins.less
+++ b/src/less/framework7/ios/_mixins.less
@@ -35,15 +35,6 @@
     -webkit-animation: @a;
     animation: @a;
 }
-.border-box(){
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.box-shadow(@bs) {
-    -webkit-box-shadow: @bs;
-    box-shadow: @bs;
-}
 .scrollable(){
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -53,6 +44,12 @@
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+}
+.flexbox-inline() {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: -webkit-inline-flex;
+    display: inline-flex;
 }
 .flex-wrap(@fw) when (@fw = nowrap) {
     -webkit-box-lines: single;
@@ -155,10 +152,10 @@
         display: block;
         z-index: 15;
         .transform-origin(50% 0%);
-        html.ios-gt-6.pixel-ratio-2 & {
+        html.pixel-ratio-2 & {
             .transform(scaleY(0.5));
         }
-        html.ios-gt-6.pixel-ratio-3 & {
+        html.pixel-ratio-3 & {
             .transform(scaleY(0.33));
         }
     }
@@ -177,10 +174,10 @@
         display: block;
         z-index: 15;
         .transform-origin(0% 50%);
-        html.ios-gt-6.pixel-ratio-2 & {
+        html.pixel-ratio-2 & {
             .transform(scaleX(0.5));
         }
-        html.ios-gt-6.pixel-ratio-3 & {
+        html.pixel-ratio-3 & {
             .transform(scaleX(0.33));
         }
     }
@@ -199,10 +196,10 @@
         display: block;
         z-index: 15;
         .transform-origin(50% 100%);
-        html.ios-gt-6.pixel-ratio-2 & {
+        html.pixel-ratio-2 & {
             .transform(scaleY(0.5));
         }
-        html.ios-gt-6.pixel-ratio-3 & {
+        html.pixel-ratio-3 & {
             .transform(scaleY(0.33));
         }
     }
@@ -221,10 +218,10 @@
         display: block;
         z-index: 15;
         .transform-origin(100% 50%);
-        html.ios-gt-6.pixel-ratio-2 & {
+        html.pixel-ratio-2 & {
             .transform(scaleX(0.5));
         }
-        html.ios-gt-6.pixel-ratio-3 & {
+        html.pixel-ratio-3 & {
             .transform(scaleX(0.33));
         }
     }
@@ -260,10 +257,27 @@
     background-image: url("data:image/svg+xml;charset=utf-8,@{url}");
 }
 
+// Backdrop Blur
+.backdrop-blur(@blur) {
+    -webkit-backdrop-filter: blur(@blur);
+    backdrop-filter: blur(@blur);
+}
+
 // Preserve3D
 .preserve3d() {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
     transform-style: preserve-3d;
+}
+
+// No Scrollbar
+.no-scrollbar() {
+    &::-webkit-scrollbar {
+        display: none !important;
+        width: 0 !important;
+        height: 0 !important;
+        -webkit-appearance: none;
+        opacity: 0 !important;
+    }
 }
