--- a/src/less/framework7/ios/calendar.less
+++ b/src/less/framework7/ios/calendar.less
@@ -1,7 +1,7 @@
 /* === Calendar === */
 .picker-calendar {
     background: #fff;
-    height: 300px;
+    height: 320px;
     width: 100%;
     overflow: hidden;
     @media (orientation: landscape) and (max-height: 415px) {
@@ -11,6 +11,9 @@
     }
     .picker-modal-inner {
         overflow: hidden;
+    }
+    .popover-picker-calendar & {
+        height: 320px;
     }
 }
 .popover.popover-picker-calendar {
@@ -23,7 +26,7 @@
     .flexbox();
     .hairline(bottom, #c4c4c4);
     font-size: 11px;
-    .border-box();
+    box-sizing: border-box;
     position: relative;
     .picker-calendar-week-day {
         .flex-shrink(1);
@@ -84,7 +87,7 @@
     .flexbox();
     .justify-content(center);
     .align-items(center);
-    .border-box();
+    box-sizing: border-box;
     width: 100% / 7;
     width: ~"-webkit-calc(100% / 7)";
     width: ~"-moz-calc(100% / 7)";
@@ -93,6 +96,8 @@
     color:#000;
     font-size: 15px;
     cursor: pointer;
+    z-index: 20;
+    height: 100%;
     &.picker-calendar-day-weekend {
     }
     &.picker-calendar-day-prev, &.picker-calendar-day-next {
@@ -109,8 +114,24 @@
         background: #e3e3e3;
     }
     &.picker-calendar-day-selected span {
-        background: @blue;
+        background: @themeColor;
         color:#fff;
+    }
+    &.picker-calendar-day-has-events span {
+        &:after {
+            content: '';
+            width: 4px;
+            height: 4px;
+            border-radius: 50%;
+            background: #ccc;
+            position: absolute;
+            margin-left: -2px;
+            left: 50%;
+            bottom: 1px;
+        }
+    }
+    &.picker-calendar-day-has-events.picker-calendar-day-selected span:after {
+        display: none;
     }
     span {
         display: inline-block;
@@ -118,7 +139,21 @@
         width: 30px;
         height: 30px;
         line-height: 30px;
+        position: relative;
 
+    }
+    .picker-calendar-range &.picker-calendar-day-selected {
+        .align-items(stretch);
+        .align-content(stretch);
+        span {
+            width: 100%;
+            border-radius: 0;
+            height: auto;
+            text-align: center;
+            .flexbox();
+            .align-items(center);
+            .justify-content(center);
+        }
     }
 }
 .picker-calendar-month-picker, .picker-calendar-year-picker {
