--- a/src/less/framework7/ios/forms.less
+++ b/src/less/framework7/ios/forms.less
@@ -6,11 +6,11 @@
         -moz-appearance: none;
         -ms-appearance: none;
         appearance: none;
-        .border-box();
+        box-sizing: border-box;
         border: none;
         background: none;
         border-radius: 0 0 0 0;
-        .box-shadow(none);
+        box-shadow: none;
         display: block;
         padding: 0px;
         margin: 0;
@@ -42,6 +42,21 @@
         line-height: 1.4;
         padding-top: 8px;
         padding-bottom: 7px;
+        &.resizable {
+            height: 43px;
+        }
+    }
+    .item-input {
+        width: 100%;
+        margin-top: -8px;
+        margin-bottom: -7px;
+        -webkit-box-flex:1;
+        -ms-flex:1;
+        .flex-shrink(1);
+    }
+    .item-title.label {
+        width: 35%;
+        .flex-shrink(0);
     }
 }
 
@@ -51,7 +66,7 @@
     vertical-align: middle;
     width: 52px;
     border-radius: 16px;
-    .border-box();
+    box-sizing: border-box;
     height: 32px;
     position: relative;
     cursor: pointer;
@@ -59,7 +74,7 @@
     .checkbox {
         width: 52px; 
         border-radius: 16px;
-        .border-box();
+        box-sizing: border-box;
         height: 32px;
         background: #e5e5e5;
         z-index: 0;
@@ -80,7 +95,7 @@
             top: 2px;
             width: 48px;
             border-radius: 16px;
-            .border-box();
+            box-sizing: border-box;
             height: 28px;
             background: #fff;
             z-index: 1;
@@ -97,7 +112,7 @@
             z-index: 2;
             top: 2px;
             left: 2px;
-            .box-shadow(0 2px 5px rgba(0,0,0,0.4));
+            box-shadow: 0 2px 5px rgba(0,0,0,0.4);
             .transform(translateX(0px));
             .transition(300ms);
         }
@@ -111,7 +126,7 @@
                     .transform(scale(0));
                 }
                 &:after {
-                    .transform(translateX(22px));
+                    .transform(translateX(20px));
                 }
             }
         }
@@ -129,14 +144,14 @@ html.android {
 }
 //Buttons
 .button {
-    border: 1px solid @blue;
-    color: @blue;
+    border: 1px solid @themeColor;
+    color: @themeColor;
     text-decoration: none;
     text-align: center;
     display: block;
     border-radius: 5px;
     line-height: 27px;
-    .border-box();
+    box-sizing: border-box;
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
@@ -152,18 +167,19 @@ html.android {
     font-size: 14px;
     font-family: inherit;
     cursor: pointer;
+    outline: 0;
     input[type="submit"]&, input[type="button"]&{
         width: 100%;
     }
 
     html:not(.watch-active-state) &:active, &.active-state {
-        background: rgba(red(@blue), green(@blue), blue(@blue), .15);
+        background: rgba(red(@themeColor), green(@themeColor), blue(@themeColor), .15);
     }
     &.button-round {
         border-radius: 27px;
     }
     &.active {
-        background: @blue;
+        background: @themeColor;
         color: #fff;
     }
     &.button-big {
@@ -173,7 +189,7 @@ html.android {
     }
     &.button-fill {
         color:#fff;
-        background: @blue;
+        background: @themeColor;
         border: none;
         html:not(.watch-active-state) &:active, &.active-state {
             opacity: 0.8;
@@ -211,6 +227,9 @@ html.android {
     .button:last-child {
         border-radius: 0 5px 5px 0;
     }
+    .button:first-child:last-child {
+        border-radius: 5px;
+    }
     .button.button-round:first-child {
         border-radius: 27px 0 0 27px;
     }
@@ -244,7 +263,35 @@ html.android {
         background-size: 100% 2px;
         background-repeat: no-repeat;
         outline: 0;
+        border: none;
+        box-sizing: content-box;
+        -ms-background-position-y: 500px;
+        &:focus, &:active {
+            border: 0;
+            outline: 0;
+        }
     }
+    
+
+    
+    // Range thumb mixin
+    .range-thumb() {
+        height: 28px;
+        width: 28px;
+        border-radius: 28px;
+        background: #fff;
+        z-index: 10;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+        border: 0;
+        outline: 0;
+        position: absolute;
+        box-sizing: border-box;
+        content: ' ';
+    }
+    
+    // ======= WebKit/Blink ========
+
+    // Before Track
     input[type="range"]:after {
         height: 2px;
         background: #fff;
@@ -256,6 +303,7 @@ html.android {
         z-index: 1;
         position: absolute;
     }
+    // Thumb
     input[type="range"]::-webkit-slider-thumb {
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -268,18 +316,11 @@ html.android {
         background: none;
     }
     input[type="range"]::-webkit-slider-thumb:after {
-        height: 28px;
-        width: 28px;
-        border-radius: 28px;
-        background: #fff;
-        z-index: 10;
-        .box-shadow(0 2px 4px rgba(0,0,0,0.4));
-        position: absolute;
+        .range-thumb();
         left: 0;
         top: 0;
-        content: ' ';
     }
-
+    // Track Active Highlight
     input[type="range"]::-webkit-slider-thumb:before {
         position: absolute;
         top: 50%;
@@ -288,8 +329,45 @@ html.android {
         height: 2px;
         margin-top: -1px;
         z-index: 1;
-        background: @blue;
+        background: @themeColor;
         content: ' ';
+    }
+
+    // ======= FireFox ========
+    input[type="range"]::-moz-range-track {
+        width: 100%;
+        height: 2px;
+        background: #b7b8b7;
+        border: none;
+        outline: 0;
+    }
+    input[type="range"]::-moz-range-thumb {
+        .range-thumb();
+    }
+    
+    // ======= IE ========
+    input[type="range"]::-ms-track {
+        width: 100%;
+        height: 2px;
+        cursor: pointer;
+        background: transparent;
+        border-color: transparent;
+        color: transparent;
+    }
+    input[type="range"]::-ms-thumb {
+        .range-thumb();
+        box-shadow: none;
+        border: 1px solid rgba(0,0,0,0.2);
+        box-sizing: border-box;
+        margin-top: 0;
+        top: 50%;
+    }
+
+    input[type="range"]::-ms-fill-lower {
+        background: @themeColor;
+    }
+    input[type="range"]::-ms-fill-upper {
+        background: #b7b8b7;
     }
 }
 
@@ -302,7 +380,7 @@ label.label-checkbox {
         position: relative;
         border-radius: 22px;
         border: 1px solid #c7c7cc;
-        .border-box();
+        box-sizing: border-box;
 
         &:after {
             content:' ';
@@ -320,7 +398,7 @@ label.label-checkbox {
         &:checked + .item-media{
             i.icon-form-checkbox {
                 border: none;
-                background-color: @blue;
+                background-color: @themeColor;
             }
             i.icon-form-checkbox:after {
                 background: no-repeat center;
@@ -340,7 +418,7 @@ label.label-radio {
         }
         &:checked ~ .item-inner{
             background: no-repeat center;
-            .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='#007aff' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
+            .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='@{themeColor}' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
             background-position: 90% center;
             background-position: ~"-webkit-calc(100% - 15px)" center;
             background-position: ~"calc(100% - 15px)" center;
