--- a/src/less/framework7/ios/grid.less
+++ b/src/less/framework7/ios/grid.less
@@ -5,7 +5,7 @@
     .flex-wrap(wrap);
     .align-items(flex-start);
     > [class*="col-"] {
-        .border-box();
+        box-sizing: border-box;
     }
 }
 @cols: 5, 10, 15, 20, 25, 100/3, 40, 50, 60, 100*(2/3), 75, 80, 85, 90, 95, 100;
