--- a/src/less/framework7/ios/icons.less
+++ b/src/less/framework7/ios/icons.less
@@ -13,19 +13,19 @@ i.icon {
     &.icon-back {
         width: 12px;
         height: 20px;
-        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M10,0l2,2l-8,8l8,8l-2,2L0,10L10,0z' fill='#007aff'/></svg>");
+        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M10,0l2,2l-8,8l8,8l-2,2L0,10L10,0z' fill='@{themeColor}'/></svg>");
     }
     &.icon-forward {
         width: 12px;
         height: 20px;
-        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M2,20l-2-2l8-8L0,2l2-2l10,10L2,20z' fill='#007aff'/></svg>");
+        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M2,20l-2-2l8-8L0,2l2-2l10,10L2,20z' fill='@{themeColor}'/></svg>");
     }
     &.icon-bars {
         width: 21px;
         height: 14px;
-        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 21 14'><path fill='#007aff' d='M0,0h2v2H0V0z M4,0h17v1H4V0z M0,6h2v2H0V6z M4,6h17v1H4V6z M0,12h2v2H0V12z M4,12h17v1H4V12z'/></svg>");
+        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 21 14'><path fill='@{themeColor}' d='M0,0h2v2H0V0z M4,0h17v1H4V0z M0,6h2v2H0V6z M4,6h17v1H4V6z M0,12h2v2H0V12z M4,12h17v1H4V12z'/></svg>");
         @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2ddpx) {
-            .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26'><path fill='#007aff' d='M0,0h4v4H0V0z M8,1h34v2H8V1z M0,11h4v4H0V11z M8,12h34v2H8V12z M0,22h4v4H0V22z M8,23h34v2H8V23z'/></svg>");
+            .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26'><path fill='@{themeColor}' d='M0,0h4v4H0V0z M8,1h34v2H8V1z M0,11h4v4H0V11z M8,12h34v2H8V12z M0,22h4v4H0V22z M8,23h34v2H8V23z'/></svg>");
             height: 13px;
         }
     }
@@ -38,66 +38,67 @@ i.icon {
         width: 29px;
         height: 29px;
         background-image: url("@{imgBaseUrl}/i-f7-ios.png");
+        border-radius: 6px;
     }
     &.icon-form-name {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-name.png");
+        background-image: url("@{imgBaseUrl}/i-form-name-ios.svg");
     }
     &.icon-form-password {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-password.png");
+        background-image: url("@{imgBaseUrl}/i-form-password-ios.svg");
     }
     &.icon-form-email {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-email.png");
+        background-image: url("@{imgBaseUrl}/i-form-email-ios.svg");
     }
     &.icon-form-calendar {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-calendar.png");
+        background-image: url("@{imgBaseUrl}/i-form-calendar-ios.svg");
     }
     &.icon-form-tel {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-tel.png");
+        background-image: url("@{imgBaseUrl}/i-form-tel-ios.svg");
     }
     &.icon-form-gender {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-gender.png");
+        background-image: url("@{imgBaseUrl}/i-form-gender-ios.svg");
     }
     &.icon-form-toggle {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-toggle.png");
+        background-image: url("@{imgBaseUrl}/i-form-toggle-ios.svg");
     }
     &.icon-form-comment {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-comment.png");
+        background-image: url("@{imgBaseUrl}/i-form-comment-ios.svg");
     }
     &.icon-form-settings {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-settings.png");
+        background-image: url("@{imgBaseUrl}/i-form-settings-ios.svg");
     }
     &.icon-form-url {
         width: 29px;
         height: 29px;
-        background-image: url("@{imgBaseUrl}/i-form-url.png");
+        background-image: url("@{imgBaseUrl}/i-form-url-ios.svg");
     }
     &.icon-next, &.icon-prev {
         width: 15px;
         height: 15px;
     }
     &.icon-next {
-        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='#007aff' d='M1,1.6l11.8,5.8L1,13.4V1.6 M0,0v15l15-7.6L0,0L0,0z'/></g></svg>");
+        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='@{themeColor}' d='M1,1.6l11.8,5.8L1,13.4V1.6 M0,0v15l15-7.6L0,0L0,0z'/></g></svg>");
     }
     &.icon-prev {
-        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='#007aff' d='M14,1.6v11.8L2.2,7.6L14,1.6 M15,0L0,7.6L15,15V0L15,0z'/></g></svg>");
+        .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='@{themeColor}' d='M14,1.6v11.8L2.2,7.6L14,1.6 M15,0L0,7.6L15,15V0L15,0z'/></g></svg>");
     }
     &.icon-plus {
         width: 25px;
