--- a/src/less/framework7/ios/intro.less
+++ b/src/less/framework7/ios/intro.less
@@ -6,7 +6,7 @@ html,body {
     overflow-x: hidden;
 }
 body {
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: -apple-system, SF UI Text, Helvetica Neue, Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
     color: #000;
@@ -39,7 +39,7 @@ a, input, textarea, select {
 
 a {
     text-decoration: none;
-    color: @blue;
+    color: @themeColor;
 }
 p {
     margin: 1em 0;
