--- a/src/less/framework7/ios/lists.less
+++ b/src/less/framework7/ios/lists.less
@@ -59,7 +59,7 @@
 
     // List items
     li {
-        .border-box();
+        box-sizing: border-box;
         position: relative;
     }
     
@@ -67,7 +67,7 @@
         .flexbox();
         .flex-shrink(0);
         .flex-wrap(nowrap);
-        .border-box();
+        box-sizing: border-box;
         .align-items(center);
         padding-top: 7px;
         padding-bottom: 8px;
@@ -89,33 +89,23 @@
         padding-top: 8px;
         padding-bottom: 7px;
         min-height: 44px;
-        .border-box();
+        box-sizing: border-box;
         .flexbox();
         -webkit-box-flex:1;
         -ms-flex:1;
+        overflow: hidden;
         .justify-content(space-between);
         .align-items(center);
+        .align-self(stretch);
     }
     .item-title {
         .flex-shrink(1);
+        min-width: 0;
         white-space: nowrap;
         position: relative;
         overflow: hidden;
         text-overflow: ellipsis;
         max-width: 100%;
-
-        &.label {
-            width: 35%;
-            .flex-shrink(0);
-        }
-    }
-    .item-input {
-        width: 100%;
-        margin-top: -8px;
-        margin-bottom: -7px;
-        -webkit-box-flex:1;
-        -ms-flex:1;
-        .flex-shrink(1);
     }
     .item-after {
         white-space: nowrap;
@@ -125,11 +115,12 @@
         .flexbox();
         max-height: 28px;
     }
-    .smart-select .item-after {
+    .smart-select .item-after, .autocomplete-opener .item-after {
         max-width: 70%;
         overflow: hidden;
-        text-overflow:ellipsis;
+        text-overflow: ellipsis;
         position: relative;
+        display: block;
     }
     .item-link {
         .transition(300ms);
@@ -162,7 +153,7 @@
         }
     }
     .item-content {
-        .border-box();
+        box-sizing: border-box;
         padding-left: 15px;
         min-height: 44px;
         .flexbox();
@@ -269,6 +260,9 @@
     &.media-list, li.media-item {
         .item-title {
             font-weight: 500;
+            html.ios-gt-8 & {
+                font-weight: 600;
+            }
         }
         .item-inner {
             display: block;
@@ -305,7 +299,7 @@
     .list-group {
         ul {
             &:after, &:before {
-                z-index: 11;
+                z-index: 25;
             }
         }
         + .list-group ul {
@@ -323,6 +317,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         color: @dividerColor;
+        z-index: 15;
     }
     .list-group-title {
         position: relative;
