--- a/src/less/framework7/ios/messages.less
+++ b/src/less/framework7/ios/messages.less
@@ -17,12 +17,15 @@
     line-height: 1;
     margin: 10px 15px;
     color: #8e8e93;
+    html.ios-gt-8 & {
+        font-weight: 600;
+    }
     span {
         font-weight: 400;
     }
 }
 .message {
-    .border-box();
+    box-sizing: border-box;
     margin: 1px 10px 0;
     max-width: 70%;
     .flexbox();
@@ -35,7 +38,7 @@
         margin-top: 10px;
     }
     .message-text {
-        .border-box();
+        box-sizing: border-box;
         border-radius: 16px;
         padding: 6px 16px 9px;
         min-width: 48px;
