--- a/src/less/framework7/ios/panels.less
+++ b/src/less/framework7/ios/panels.less
@@ -14,7 +14,7 @@
 .panel {
     z-index: 6000;
     background: #111;
-    .border-box();
+    box-sizing: border-box;
     .scrollable();
     position: absolute;
     width: @panelWidth;
