--- a/src/less/framework7/ios/picker.less
+++ b/src/less/framework7/ios/picker.less
@@ -62,7 +62,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    .border-box();
+    box-sizing: border-box;
     .transition(300ms);
     .picker-items-col-absolute &{
         position: absolute;
@@ -74,14 +74,10 @@
         color: #000;
         .transform(translate3d(0,0,0) rotateX(0deg));
     }
-    &.picker-before-selected {
-    }
-    &.picker-after-selected {
-    }
 }
 .picker-center-highlight {
     height: 36px;
-    .border-box();
+    box-sizing: border-box;
     position: absolute;
     left: 0;
     width: 100%;
