--- a/src/less/framework7/ios/searchbar.less
+++ b/src/less/framework7/ios/searchbar.less
@@ -6,7 +6,7 @@
     height: @searchbarSize;
     width: 100%;
     background: @searchbarBg;
-    .border-box();
+    box-sizing: border-box;
     .hairline(bottom, @searchbarBorderColor);
     padding: 0 8px;
     overflow: hidden;
@@ -20,7 +20,7 @@
         .flex-shrink(1);
     }
     input[type="search"] {
-        .border-box();
+        box-sizing: border-box;
         width: 100%;
         height: 100%;
         display: block;
