--- a/src/less/material.less
+++ b/src/less/material.less
@@ -1,3 +1,3 @@
-@import "framework7/ios/framework7.ios.less";
+@import "framework7/material/framework7.material.less";
 @import "framework7/custom/index.less";
 @import "ionicons/ionicons.less";
