fix material toolbar

--- a/src/less/framework7/material/searchbar.less
+++ b/src/less/framework7/material/searchbar.less
@@ -126,9 +126,9 @@
 }
 .navbar-fixed, .navbar-through {
     .page > .searchbar, > .searchbar {
-        top: @navbarSize;
+        top: @toolbarSize;
         & ~ .page-content {
-            padding-top: @searchbarSize + @navbarSize;
+            padding-top: @searchbarSize + @toolbarSize;
         }
     }
 }
