fix material toolbar

--- a/src/less/framework7/material/toolbars-pages.less
+++ b/src/less/framework7/material/toolbars-pages.less
@@ -28,7 +28,7 @@
     .page-content {
         padding-bottom: @tabbarLabelsSize;
         @media all and (min-width:768px) {
-            padding-bottom: @tabbarLabelsSizeTablet;
+            padding-bottom: @tabbarLabelsSize;
         }
     }
 }
