--- a/src/less/framework7/material/toolbars.less
+++ b/src/less/framework7/material/toolbars.less
@@ -1,20 +1,20 @@
 /* === Toolbars === */
 
 //Toolbar/Navbar
-@toolbarBg : #f7f7f8;
-@toolbarBgBlured: rgba(248,248,249, 0.85);
-@toolbarBorderColor: #c4c4c4;
-@toolbarLinksColor: @themeColor;
-@toolbarSize: 44px;
+@toolbarBg : @themeColor;
+@toolbarColor: #fff;
+@toolbarLinksColor: #fff;
+@navbarSize: 56px;
+@toolbarSize: @navbarSize;
 
 //Tab bar
-@tabbarLabelsSize: 50px;
-@tabbarLinksColor: #929292;
-@tabbarActiveLinksColor: @themeColor;
-@tabbarLabelsSizeTablet: 56px;
+@tabbarSize: 48px;
+@tabbarLabelsSize: 72px;
+@tabbarLinksColor: rgba(255,255,255,0.7);
+@tabbarActiveLinksColor: rgba(255,255,255,1);
 
 // Toolbars animations
-@toolbarDuration: 400ms;
+@toolbarDuration: 300ms;
 
 .navbar-inner, .toolbar-inner {
     position: absolute;
@@ -22,89 +22,74 @@
     top: 0;
     width: 100%;
     height: 100%;
-    padding: 0 8px;
     box-sizing: border-box;
+    overflow: hidden;
     .flexbox();
-    .justify-content(space-between);
     .align-items(center);
+}
+.navbar-inner {
+    .justify-content(flex-start);
+}
+.toolbar-inner {
+    .justify-content(space-between);
 }
 .navbar-inner.cached {
     display: none;
 }
 .navbar, .toolbar {
-    height: @toolbarSize;
     width: 100%;
     box-sizing: border-box;
-    font-size: 17px;
     position: relative;
     margin: 0;
     z-index: 500;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    color: @toolbarColor;
     b {
         font-weight: 500;
-        html.ios-gt-8 & {
-            font-weight: 600;
-        }
     }
+}
+.navbar ~ .toolbar {
+    z-index: 499;
 }
 .navbar, .toolbar, .subnavbar {
     background: @toolbarBg;
     a.link {
-        line-height: @toolbarSize;
-        height: @toolbarSize;
         text-decoration: none;
         position: relative;
-        .flexbox();
-        .justify-content(flex-start);
-        .align-items(center);
-        .transition(300ms);
-        .transform(translateZ(0px));
-        html:not(.watch-active-state) &:active, &.active-state {
-            opacity: 0.3;
-            .transition(0ms);
-        }
-        i+span, i+i, span+i, span+span {
-            margin-left: 7px;
-        }
-    }
-    a.icon-only {
-        min-width: @toolbarSize;
+        color: @toolbarLinksColor;
+        box-sizing: border-box;
         .flexbox();
         .justify-content(center);
         .align-items(center);
-        margin: 0;
+        padding: 0 16px;
+        min-width: 48px;
+        .active-highlight();
+        i+span, i+i, span+i, span+span {
+            margin-left: 8px;
+        }
+    }
+    a.icon-only {
+        min-width: 0;
+        .flex-shrink(0);
     }
     i.icon {
         display: block;
     }
 }
-.navbar {
-    left: 0;
-    top: 0;
-    .hairline(bottom, @toolbarBorderColor);
-    &:after {
-        backface-visibility: hidden;
-    }
-    &.no-border {
-        .hairline-remove(bottom);
-    }
+.navbar, .subnavbar {
     .center {
-        font-size: 17px;
+        font-size: 20px;
         font-weight: 500;
-        html.ios-gt-8 & {
-            font-weight: 600;
-        }
         text-align: center;
-        margin: 0;
+        margin: 0 16px;
         position: relative;
         overflow: hidden;
         text-overflow:ellipsis;
         white-space: nowrap;
-        line-height: @toolbarSize;
-        .flex-shrink(10);
-        .flexbox();
-        .align-items(center);
+        line-height: @navbarSize;
+        display: inline-block;
+        text-align: left;
     }
     .left, .right {
         .flex-shrink(0);
@@ -112,20 +97,24 @@
         .justify-content(flex-start);
         .align-items(center);
         .translate3d(0,0,0);
-        a+a {
-            margin-left: 15px;
-        }
-    }
-    .left {
-        margin-right: 10px;
     }
     .right {
-        margin-left: 10px;
+        margin-left: auto;
     }
     .right:first-child {
         position: absolute;
-        right: 8px;
+        right: 16px;
         height: 100%;
+    }
+}
+.navbar {
+    left: 0;
+    top: 0;
+    height: @navbarSize;
+    font-size: 20px;
+    a.link {
+        line-height: @navbarSize;
+        height: @navbarSize;
     }
     .popup & {
         .translate3d(0,0,0);
@@ -137,16 +126,22 @@
     position: absolute;
     left: 0;
     top: 100%;
-    margin-top: -1px;
     z-index: 20;
     box-sizing: border-box;
-    padding: 0 8px;
+    padding: 0 16px;
     .flexbox();
     .justify-content(space-between);
     .align-items(center);
-    .hairline(bottom, @toolbarBorderColor);
-    &.no-border {
-        .hairline-remove(bottom);
+    overflow: hidden;
+    a.link {
+        line-height: @toolbarSize;
+        height: @toolbarSize;
+    }
+    .center {
+        line-height: @toolbarSize;
+        &:first-child {
+            margin-left: 56px;
+        }
     }
     .navbar.no-border & {
         margin-top: 0;
@@ -174,32 +169,34 @@
         left: 0;
         top: 0;
     }
+    .center {
+
+    }
 }
 .toolbar {
     left: 0;
     bottom: 0;
-    .hairline(top, @toolbarBorderColor);
-    &.no-border {
-        .hairline-remove(top);
+    height: @toolbarSize;
+    font-size: 14px;
+    a.link {
+        line-height: @toolbarSize;
+        height: @toolbarSize;
     }
     a {
         .flex-shrink(1);
         position: relative;
         white-space: nowrap;
         text-overflow:ellipsis;
-        overflow: hidden;
     }
 }
 
 // Tabbar
 .tabbar {
-    color: @tabbarLinksColor;
     z-index: 5001;
-    a {
-        color: @tabbarLinksColor;
-    }
-    a.active {
-        color: @tabbarActiveLinksColor;
+    overflow: hidden;
+    .toolbar-inner {
+        padding-left: 0;
+        padding-right: 0;
     }
     a.link {
         line-height: 1.4;
@@ -208,162 +205,80 @@
         height: 100%;
         width: 100%;
         box-sizing: border-box;
+        padding-left: 0;
+        padding-right: 0;
         .flexbox();
         .justify-content(center);
         .align-items(center);
-        overflow: visible;
-        -webkit-box-flex: 1;
         -ms-flex: 1;
         -webkit-box-orient: vertical;
         -moz-box-orient: vertical;
         -ms-flex-direction: column;
         -webkit-flex-direction: column;
         flex-direction: column;
+        font-size: 14px;
+        text-transform: uppercase;
     }
     i.icon {
-        height: 30px;
+        height: 24px;
+    }
+    a.tab-link {
+        .transition(300ms);
+        overflow: hidden;
+        color: @tabbarLinksColor;
+        position: relative;
+        &.active, html:not(.watch-active-state) &:active, &.active-state {
+            color: @tabbarActiveLinksColor;
+        }
+    }
+    .tab-link-highlight {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 3px;
+        background: darken(@themeColor, 15%);
+        background: rgba(255,255,255,0.5);
+        .transition(300ms);
     }
 }
 .tabbar-labels {
     height: @tabbarLabelsSize;
     a.tab-link, a.link {
-        padding-top: 4px;
-        padding-bottom: 4px;
+        padding-top: 12px;
+        padding-bottom: 12px;
         height: 100%;
         .justify-content(space-between);
-        i + span {
-            margin: 0;
-        }
     }
     span.tabbar-label {
         line-height: 1;
         display: block;
         margin: 0;
-        letter-spacing: 0.01em;
-        font-size: 10px;
+        margin-top: 10px;
         position: relative;
         text-overflow: ellipsis;
         white-space: nowrap;
+        overflow: hidden;
+        max-width: 100%;
     }
 }
-@media all and (min-width:768px) {
-    .tabbar {
-        .toolbar-inner {
-            .justify-content(center);
-        }
-        a.tab-link, a.link {
-            width: auto;
-            min-width: 105px;
-        }
+.tabbar-scrollable {
+    .toolbar-inner {
+        .justify-content(flex-start);
+        .no-scrollbar();
+        overflow: auto;
     }
-    .tabbar-labels {
-        height: @tabbarLabelsSizeTablet;
-        span.tabbar-label {
-            font-size: 14px;
-        }
+    a.tab-link, a.link {
+        width: auto;
+        .flex-shrink(0);
+        -ms-flex: 0;
+        padding: 0 16px;
     }
 }
-
-.navbar-from-right-to-center {
-    .left, .right, .center, .subnavbar, .fading {
-        .animation(navbarElementFadeIn @toolbarDuration forwards);
-    }
-    .sliding {
-        opacity: 1;
-    }
-    
-}
-.navbar-from-center-to-right {
-    .left, .right, .center, .subnavbar, .fading {
-        .animation(navbarElementFadeOut @toolbarDuration forwards);
-    }
-    .sliding {
-        opacity: 0;
-    }
-    .subnavbar.sliding {
-        opacity: 1;
-    }
-}
-@-webkit-keyframes navbarElementFadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-@keyframes navbarElementFadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-.navbar-from-center-to-left {
-    .left, .right, .center, .subnavbar, .fading {
-        .animation(navbarElementFadeOut @toolbarDuration forwards);
-    }
-    .sliding {
-        opacity: 0;
-    }
-    .subnavbar.sliding {
-        opacity: 1;
-    }
-}
-.navbar-from-left-to-center {
-    .left, .right, .center, .subnavbar, .fading {
-        .animation(navbarElementFadeIn @toolbarDuration forwards);
-    }
-    .sliding {
-        opacity: 1;
-    }
-}
-.navbar-on-left {
-    .left, .right, .center, .subnavbar, .fading {
-        opacity: 0;
-    }
-    .sliding {
-        opacity: 0;
-    }
-    .subnavbar.sliding {
-        opacity: 1;
-        .translate3d(-100%,0,0);
-    }
-}
-.navbar-on-right {
-    .left, .right, .center, .subnavbar, .fading {
-        opacity: 0;
-    }
-    .sliding {
-        opacity: 0;
-    }
-    .subnavbar.sliding {
-        .translate3d(100%,0,0);
-    }
-}
-@-webkit-keyframes navbarElementFadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
-@keyframes navbarElementFadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
-.navbar-from-right-to-center, .navbar-from-center-to-right, .navbar-from-center-to-left, .navbar-from-left-to-center {
-    .left.sliding .back.link .icon {
-        .transition(@toolbarDuration);
-    }
-    .sliding {
-        .transition(@toolbarDuration);
-        .animation(none);
+.toolbar-bottom {
+    bottom: 0;
+    top: auto;
+    .tab-link-highlight {
+        bottom: auto;
+        top: 0;
     }
 }
