--- a/src/less/framework7/custom/index.less
+++ b/src/less/framework7/custom/index.less
@@ -2,3 +2,4 @@
 @import url('indexed-list.less');
 @import url('toast.less');
 @import url('welcomescreen.less');
+@import url('floating-label.less');
