--- a/src/less/framework7/plugins/index.less
+++ b/src/less/framework7/plugins/index.less
@@ -3,3 +3,4 @@
 @import url('toast.less');
 @import url('welcomescreen.less');
 @import url('floating-label.less');
+@import url('upscroller.less');
