--- a/kitchen-sink/css/demo.css
+++ b/kitchen-sink/css/demo.css
@@ -1,5 +1,30 @@
 .default_head {background-image: url("../img/app/head/default_head.png")}
 
+.tutorialicon {
+  font-size: 250px;
+  line-height: 170px;
+}
+
+.tutorial-close-btn {
+  background: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  color: #0da6ec;
+}
+
+.welcomescreen-container .welcomescreen-text a{
+  color: #fff;
+  text-decoration: underline;
+}
+
+.tutorial-close-btn {
+  background: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  color: #0da6ec !important;
+  text-decoration: none !important;
+}
+
 /*add by fang end*/
 .panel {
   background: #222;
