--- a/src/less/ios.less
+++ b/src/less/ios.less
@@ -1,3 +1,3 @@
 @import "framework7/ios/framework7.ios.less";
-@import "framework7/custom/index.less";
+@import "framework7/plugins/index.less";
 @import "ionicons/ionicons.less";
