--- a/src/less/material.less
+++ b/src/less/material.less
@@ -1,3 +1,3 @@
 @import "framework7/material/framework7.material.less";
-@import "framework7/custom/index.less";
+@import "framework7/plugins/index.less";
 @import "ionicons/ionicons.less";
