--- a/src/less/framework7/plugins/index.less
+++ b/src/less/framework7/plugins/index.less
@@ -4,3 +4,4 @@
 @import url('welcomescreen.less');
 @import url('floating-label.less');
 @import url('upscroller.less');
+@import url('3dpanels.less');
