--- a/src/less/framework7/material/panels.less
+++ b/src/less/framework7/material/panels.less
@@ -15,7 +15,6 @@
     .transition(@panelsDuration);
 }
 .panel {
-    z-index: 1000;
     display: none;
     background: #fff;
     box-sizing: border-box;
@@ -51,7 +50,7 @@ body.with-panel-left-cover, body.with-panel-right-cover {
     .panel {
         box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
     }
-    .views {
+    .page {
         .translate3d(0);
     }
     .panel-overlay {
@@ -60,7 +59,7 @@ body.with-panel-left-cover, body.with-panel-right-cover {
     }
 }
 body.with-panel-left-reveal, body.with-panel-right-reveal {
-    .views {
+    .page {
         box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
         .transition(@panelsDuration);
         -webkit-transition-property: -webkit-transform, box-shadow;
@@ -74,7 +73,7 @@ body.with-panel-left-reveal, body.with-panel-right-reveal {
     }
 }
 body.with-panel-left-reveal {
-    .views {
+    .page {
         .translate3d(@panelWidth);
     }
     .panel-overlay {
@@ -87,7 +86,7 @@ body.with-panel-left-cover {
     }
 }
 body.with-panel-right-reveal {
-    .views {
+    .page {
         .translate3d(-@panelWidth);
     }
     .panel-overlay {
@@ -103,7 +102,7 @@ body.panel-closing {
     .panel-overlay {
         display: block;
     }
-    .views {
+    .page {
         .transition(@panelsDuration);
         -webkit-transition-property: -webkit-transform, box-shadow;
         -moz-transition-property: -moz-transform, box-shadow;
