--- a/src/less/framework7/ios/panels.less
+++ b/src/less/framework7/ios/panels.less
@@ -13,6 +13,7 @@
     display: none;
 }
 .panel {
+    z-index: 1000;
     display: none;
     background: #111;
     box-sizing: border-box;
@@ -44,7 +45,7 @@
     }
 }
 body.with-panel-left-cover, body.with-panel-right-cover {
-    .page {
+    .views {
         .translate3d(0);
     }
     .panel-overlay {
@@ -52,7 +53,7 @@ body.with-panel-left-cover, body.with-panel-right-cover {
     }
 }
 body.with-panel-left-reveal, body.with-panel-right-reveal {
-    .page {
+    .views {
         .transition(@panelsDuration);
         -webkit-transition-property: -webkit-transform;
         -moz-transition-property: -moz-transform;
@@ -63,7 +64,7 @@ body.with-panel-left-reveal, body.with-panel-right-reveal {
     }
 }
 body.with-panel-left-reveal {
-    .page {
+    .views {
         .translate3d(@panelWidth);
     }
     .panel-overlay {
@@ -76,7 +77,7 @@ body.with-panel-left-cover {
     }
 }
 body.with-panel-right-reveal {
-    .page {
+    .views {
         .translate3d(-@panelWidth);
     }
     .panel-overlay {
@@ -89,7 +90,7 @@ body.with-panel-right-cover {
     }
 }
 body.panel-closing {
-    .page {
+    .views {
         .transition(@panelsDuration);
         -webkit-transition-property: -webkit-transform;
         -moz-transition-property: -moz-transform;
