--- a/src/less/framework7/material/framework7.material.less
+++ b/src/less/framework7/material/framework7.material.less
@@ -2,6 +2,7 @@
 @import url('_colors-vars.less');
 @import url('intro.less');
 @import url('grid.less');
+@import url('views.less');
 @import url('pages.less');
 @import url('toolbars.less');
 @import url('toolbars-pages.less');
