--- a/src/less/framework7/plugins/3dpanels.less
+++ b/src/less/framework7/plugins/3dpanels.less
@@ -3,13 +3,13 @@ body.panels-3d {
     -moz-perspective: 1100px;
     perspective: 1100px;
     overflow: hidden;
-    .page {
+    .views {
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
         transform-style: preserve-3d;
     }
 }
-
+    
 body.panels-3d .panel-reveal {
     &.panel-left {
         -webkit-transform: translate3d(-260px, 0, 0);
@@ -21,7 +21,7 @@ body.panels-3d .panel-reveal {
     }
 }
 body.panels-3d.with-panel-left-reveal {
-    .page {
+    .views {
         -webkit-transform: translate3d(260px, 0, 0) rotateY(-30deg);
         transform: translate3d(260px, 0, 0) rotateY(-30deg);
         -webkit-transform-origin: right center;
@@ -33,7 +33,7 @@ body.panels-3d.with-panel-left-reveal {
     }
 }
 body.panels-3d.with-panel-right-reveal {
-    .page {
+    .views {
         -webkit-transform: translate3d(-260px, 0, 0) rotateY(30deg);
         transform: translate3d(-260px, 0, 0) rotateY(30deg);
         -webkit-transform-origin: left center;
