fix ios tarbar height

--- a/src/less/framework7/material/toolbars.less
+++ b/src/less/framework7/material/toolbars.less
@@ -194,6 +194,8 @@
 .tabbar {
     z-index: 5001;
     overflow: hidden;
+    bottom: auto;
+    top: 0;
     .toolbar-inner {
         padding-left: 0;
         padding-right: 0;
