fix material toolbars-pages

--- a/src/less/framework7/material/toolbars-pages.less
+++ b/src/less/framework7/material/toolbars-pages.less
@@ -141,7 +141,7 @@
         .translate3d(0,-128px,0);
     }
     &.toolbar-hidden.messagebar, &.toolbar-hidden.toolbar-bottom {
-        .translate3d(0, 100%,0);
+        .translate3d(0, 100%,0) !important;
     }
 }
 .page.no-toolbar .page-content, .page.no-tabbar .page-content {
