use all cached verion

--- a/src/less/framework7/material/toolbars.less
+++ b/src/less/framework7/material/toolbars.less
@@ -280,7 +280,7 @@
     bottom: 0;
     top: auto;
     .tab-link-highlight {
-        bottom: auto;
-        top: 0;
+        bottom: 0;
+        top: auto;
     }
 }
